--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   swipe_cards: ^2.0.0+1
   url_launcher: ^6.0.18
+  firebase_core: ^1.19.1
+  cloud_firestore: ^3.3.0
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +50,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  cloud_firestore: ^3.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
