--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,3 +91,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+dependency_overrides:
+  firebase_auth_platform_interface: 6.7.0
+  firebase_core_platform_interface: 4.5.1
